add multimodal lstm

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,37 @@ demo/*
 *-Copy*.ipynb
 
 checkpoint
+models/model_deeplab.py
+models/convert_caffemodel/params/deeplab_weights.ckpt
+result/i0.png
+result/i1.png
+result/i2.png
+result/i3.png
+result/i4.png
+result/i5.jpeg
+result/i6.jpg
+result/i7.jpg
+result/2upsampling/0.png
+result/2upsampling/1.png
+result/2upsampling/2.png
+result/2upsampling/3.png
+result/2upsampling/4.png
+result/2upsampling/5.png
+result/2upsampling/6.png
+result/2upsampling/7.png
+result/global_context/0.png
+result/global_context/1.png
+result/global_context/2.png
+result/global_context/3.png
+result/global_context/4.png
+result/global_context/5.png
+result/global_context/6.png
+result/global_context/7.png
+result/pretrained/0.png
+result/pretrained/1.png
+result/pretrained/2.png
+result/pretrained/3.png
+result/pretrained/4.png
+result/pretrained/5.png
+result/pretrained/6.png
+result/pretrained/7.png
